--- a/application/index/view/No.7_qzhai/public/sidebar.html
+++ b/application/index/view/No.7_qzhai/public/sidebar.html
@@ -1,7 +1,11 @@
 <div id="sidebar" class="uk-width-small-1-1 uk-width-medium-1-4 uk-width-large-3-10">
     <ul class="ul">
+	<li>
+            <h4>文章提示</h4>
+            <div class="textwidget">所有文章内容都很简单，因为熟悉，所以简单，如果生涩，一切皆难。</div>
+	</li>
         <li>
-            <h4>提示</h4>
+            <h4>主题提示</h4>
             <div class="textwidget">本网站模板网上摘抄，原模板为WordPress主题。</div>
 	</li>
         <li>
